--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gen",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "马廷锋 <matingfeng@mucfc.com>",
+  "author": "马廷锋 <419194613@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
